attached all photos

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 						<h2>Тут Ви можете зібрати свій власний подарунок!</h2>
 						<div class="collections">
 							<ul>
-								<a href="#"><li><span class="description">Описание</span><img src="/home/lena/Downloads/template_bootstrap/images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="/home/lena/Downloads/template_bootstrap/images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="/home/lena/Downloads/template_bootstrap/images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="/home/lena/Downloads/template_bootstrap/images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
 							</ul>
 						</div>
 					</div>
