top-line adaptivity

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
 		<div class="header_topline">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4"><a href="#" class="logo"><img src="./images/label.jpg"></a></div>
+					<div class="col-md-4 col-sm-6 col-xs-8"><a href="#" class="logo"><img src="./images/label.jpg"></a></div>
+					<div class="col-md-8 col-sm-6 col-xs-4">
+						<a href="#" class="toggle-mnu hidden-lg hidden-md"><span></span></a>
+					</div>
 					<div class="col-md-8">
 						<nav class="main_mnu">
 							<ul>
