--- a/index.html
+++ b/index.html
@@ -45,16 +45,33 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="col-md-12">
-				<div class="row">
+			<div class="row">
+				<div class="col-md-8">
 					<div class="main_label">
-						<h1>Якщо ви опинились на цій сторінці - то ви точно та людина, яка вміє дарувати радість близьким</h1>
-					</div>
+							<h1>Вітаю Вас на моєму сайті <q>GIFTS Handmade</q>. Мене звати Аліна і я засновниця цього проекту. Ціль мого проекту - допомогти Вам дарувати радість близьким та коханим.</h1>
+					</div>			
 				</div>
-			</div>
-		</div>	
+				<div class="col-md-4">
+					<form class="forms">
+						<h4>Форма зворотньго зв’язку</h4>
+						<label>
+							Ваше ім’я
+							<input type="text" name="name" required>
+						</label>
+						<label>
+							Ваш телефон
+							<input type="text" name="phone" required>
+						</label>
+						<div class="button-wrap">
+							<button class="buttons">Відправити</button>
+						</div>
+					</form>
+				</div>
+			</div>	
+		</div>
+		<div class="arrow-bottom"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 	</header>
-	<section class="collect_own">
+	<section class="homesect">
 		<div class="collected_gift">
 			<div class="container">
 				<div class="col-md-12">
@@ -70,6 +87,21 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		
+	</section>
+	<section class="about">
+		<div class="container">
+			<div class="rov">
+				<div class="col-md-8">
+					<div class="about-me">
+						
+					</div>
+				</div>
+				<div class="col-md-4"></div>
 			</div>
 		</div>
 	</section>
