--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="row">
 				<div class="col-md-8">
 					<div class="main_label">
-							<h1>Вітаю Вас на моєму сайті <q>GIFTS Handmade</q>. Мене звати Аліна і я засновниця цього проекту. Ціль мого проекту - допомогти Вам дарувати радість близьким та коханим.</h1>
+							<h1>Вітаю Вас на моєму сайті <q>Gifts Handmade</q>. Мене звати Аліна і я засновниця цього проекту. Ціль мого проекту - допомогти Вам дарувати радість близьким та коханим.</h1>
 					</div>			
 				</div>
 				<div class="col-md-4">
@@ -72,7 +72,7 @@
 		<div class="arrow-bottom"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
 	</header>
 	<section class="homesect">
-		<div class="collected_gift">
+		<div class="uncollected_gift">
 			<div class="container">
 				<div class="col-md-12">
 					<div class="row">
