--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 				<div class="col-md-12">
 					<div class="row">
 						<h2>Тут Ви можете зібрати свій власний подарунок!</h2>
+						<p>Для цього протрібно просто обрати з кожного розділу найменування, яке подобається, та передати інформацію замовивши зворотній зв’язок. </p>
 						<div class="collections">
 							<ul>
 								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
