change box's name

--- a/index.html
+++ b/index.html
@@ -77,13 +77,17 @@
 				<div class="col-md-12">
 					<div class="row">
 						<h2>Тут Ви можете зібрати свій власний подарунок!</h2>
-						<p>Для цього протрібно просто обрати з кожного розділу найменування, яке подобається, та передати інформацію замовивши зворотній зв’язок. </p>
+						<p>Для цього протрібно просто обрати з кожного розділу найменування, яке подобається, та передати інформацію, замовивши зворотній зв’язок. </p>
 						<div class="collections">
 							<ul>
-								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
-								<a href="#"><li><span class="description">Описание</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Бокси</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Квіточки</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Цукерки</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Листи</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+                                <a href="#"><li><span class="description">Фатін</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+                                <a href="#"><li><span class="description">Банти</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+							</ul>
+							</ul>
 							</ul>
 						</div>
 					</div>
