fixed top menu and first dropdown

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<title>Заголовок</title>
+	<title>Подарунки своїми руками</title>
 	<meta name="description" content="" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,7 +26,7 @@
 		<div class="header_topline">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 col-sm-6 col-xs-8"><a href="#" class="logo"><img src="./images/label.jpg"></a></div>
+					<div class="col-md-4 col-sm-6 col-xs-8"><a href="#" class="logo"><img src="./images/label_trim.png"></a></div>
 					<div class="col-md-8 col-sm-6 col-xs-4">
 						<a href="#" class="toggle-mnu hidden-lg hidden-md"><span></span></a>
 					</div>
@@ -34,8 +34,15 @@
 						<nav class="main_mnu">
 							<ul>
 								<li><a href="#">Головна</a></li>
-								<li><a href="#">Подарунки</a></li>
-								<li><a href="#">Про мене</a></li>
+								<li>
+                                    <div class="dropdown">
+                                        <a href="#">Подарунки <i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a>
+                                        <div class="dropdown-content">
+                                            <a href="#">Зібрати самостійно</a>
+                                            <a href="#">Готові</a>
+                                        </div>
+                                    </div>
+                                </li>
 								<li><a href="#">Відгуки</a></li>
 								<li><a href="#">Контакти</a></li>
 							</ul>
@@ -44,7 +51,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="container">
+        <div class="header_content">
+            <div class="container">
 			<div class="row">
 				<div class="col-md-8">
 					<div class="main_label">
@@ -70,6 +78,7 @@
 			</div>	
 		</div>
 		<div class="arrow-bottom"><i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+        </div>
 	</header>
 	<section class="homesect">
 		<div class="uncollected_gift">
@@ -87,7 +96,24 @@
                                 <a href="#"><li><span class="description">Фатін</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
                                 <a href="#"><li><span class="description">Банти</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
 							</ul>
-							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    <section class="homesect">
+		<div class="collected_gift">
+			<div class="container">
+				<div class="col-md-12">
+					<div class="row">
+						<h2>Тут можна подивитися та обрати вже готові коллекції подарунків!</h2>
+						<div class="collections">
+							<ul>
+								<a href="#"><li><span class="description">Звірятка</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Black&amp;White</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">Акварельні</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+								<a href="#"><li><span class="description">ПАоштові</span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
 							</ul>
 						</div>
 					</div>
