--- a/acvarel.html
+++ b/acvarel.html
@@ -35,7 +35,8 @@
 						<nav class="main_mnu">
 							<ul>
 								<li><a href="index.html">Головна</a></li>
-								<li>
+                                <li><a href="index.html#gifts">Подарунки</a></li>
+								<!--<li>
                                     <div class="dropdown">
                                         <a href="#">Подарунки <i class="fa fa-chevron-circle-down" aria-hidden="true"></i></a>
                                         <div class="dropdown-content">
@@ -43,7 +44,7 @@
                                             <a href="#">Готові</a>
                                         </div>
                                     </div>
-                                </li>
+                                </li>-->
 								<li><a href="#">Відгуки</a></li>
 								<li><a href="#">Контакти</a></li>
 							</ul>
@@ -57,24 +58,10 @@
                 <ul>
                     <div class="row">
                         <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Box/bear.jpg"><li><span class="description"></span><img src="./images/Uncollected/Box/bear.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Acvarel/1.jpg"><li><span class="description"></span><img src="./images/Collected/Acvarel/1.jpg"></li></a>
                         </div>
                         <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Box/fox.jpg"><li><span class="description"></span><img src="./images/Uncollected/Box/fox.jpg"></li></a>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Box/raccoon.jpg"><li><span class="description"></span><img src="./images/Uncollected/Box/raccoon.jpg"></li></a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Rose/rose.jpg"><li><span class="description"></span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Rose/rose.jpg"><li><span class="description"></span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
-                        </div>
-                        <div class="col-md-4">
-                            <a class="item" href="./images/Uncollected/Rose/rose.jpg"><li><span class="description"></span><img src="./images/Uncollected/Rose/rose.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Acvarel/2.jpg"><li><span class="description"></span><img src="./images/Collected/Acvarel/2.jpg"></li></a>
                         </div>
                     </div>
                 </ul>
