--- a/b&w.html
+++ b/b&w.html
@@ -45,7 +45,7 @@
                                         </div>
                                     </div>
                                 </li>-->
-								<li><a href="#">Відгуки</a></li>
+								<!--<li><a href="#">Відгуки</a></li>-->
 								<li><a href="#">Контакти</a></li>
 							</ul>
 						</nav>
