--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="shortcut icon" href="favicon.png" />
 	<link rel="stylesheet" href="libs/bootstrap/bootstrap-grid-3.3.1.min.css" />
+    <link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css" />
 	<link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css" />
 	<link rel="stylesheet" href="libs/owl-carousel/owl.carousel.css" />
@@ -112,7 +113,7 @@
 							<ul>
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <a href="animal.html"><li><span class="description">Звірятка</span><img src="./images/Collected/Animals/1.jpg"></li></a>
+                                        <a href="animal.html"><li><span class="description">Звірятка</span><img src="./images/Collected/Animals/3.jpg"></li></a>
                                     </div>
                                     <div class="col-md-4">
                                         <a href="b&w.html"><li><span class="description">Black&amp;White</span><img src="./images/Collected/BlackAndWhite/1.jpg"></li></a>
@@ -132,7 +133,7 @@
                                         <a href="ukrstyle.html"><li><span class="description">Український стиль</span><img src="./images/Collected/Ukrstyle/1.jpg"></li></a>
                                     </div>
                                     <div class="col-md-4">
-                                        <a href="brels.html"><li><span class="description">Брелки</span><img src="./images/Collected/Brels/3.jpg"></li></a>
+                                        <a href="brels.html"><li><span class="description">Брелоки</span><img src="./images/Collected/Brels/3.jpg"></li></a>
                                     </div>
                                 </div>
 							</ul>
@@ -198,6 +199,7 @@
 	<![endif]-->
 	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
 	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+    <script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<script src="libs/fancybox/jquery.fancybox.pack.js"></script>
 	<script src="libs/waypoints/waypoints-1.6.2.min.js"></script>
 	<script src="libs/scrollto/jquery.scrollTo.min.js"></script>
