--- a/index.html
+++ b/index.html
@@ -79,14 +79,7 @@
 					</form>
 				</div>-->
                 <div class="form__wrapper">
-                    <form id="form-contact" method="POST" class="form-element" autocomplete="off">
-                        <p class="form-title">Закажите обратный звонок и наш консультант свяжется с вами</p>
-                        <p class="form-message"></p>
-                        <input name="name" type="text" class="form-input__name" tabindex="0" placeholder="Введите ваше имя" required>
-                        <input name="phone" type="tel" class="form-input__phone" tabindex="0" pattern="^[ 0-9]+$" placeholder="Введите ваш телефон" required>
-                        <input name="theme" type="hidden" class="form-input__theme"  value="Заявка с сайта">
-                        <input type="submit" class="form-input__button" value="Отправить">
-                    </form>
+                    <img src='mail.php?id=id_page'>
                 </div>
 			</div>	
 		</div>
