--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
 							<h1>Вітаю Вас на моєму сайті <q>Gifts Handmade</q>. Мене звати Аліна і я засновниця цього проекту. Ціль мого проекту - допомогти Вам дарувати радість близьким та коханим.</h1>
 					</div>			
 				</div>
+				<form id="contact-form" action="//formspree.io/your@email.com" method="post">
+					<input type="text" name="Name" placeholder="Name" required>
+					<input type="email" name="Email" placeholder="Email" required>
+					<textarea name="Message" cols="30" rows="6" placeholder="Message" required></textarea>
+					<!-- CONFIG -->
+					<input class="is-hidden" type="text" name="_gotcha">
+					<input type="hidden" name="_subject" value="Subject">
+					<input type="hidden" name="_cc" value="email@cc.com">
+					<!-- /CONFIG -->
+					<input class="submit" type="submit" value="Send">
+				</form>
+
+
 				<!--<div class="col-md-4 form__wrapper">
 					<form id="form-contact" method="POST" class="form-element forms" autocomplete="off">
 						<h4>Форма зворотньго зв’язку</h4>
