--- a/index.html
+++ b/index.html
@@ -61,36 +61,40 @@
 							<h1>Вітаю Вас на моєму сайті <q>Gifts Handmade</q>. Мене звати Аліна і я засновниця цього проекту. Ціль мого проекту - допомогти Вам дарувати радість близьким та коханим.</h1>
 					</div>			
 				</div>
-				<form id="contact-form" action="//formspree.io/your@email.com" method="post">
+				<!--<form id="contact-form" action="//formspree.io/your@email.com" method="post">
 					<input type="text" name="Name" placeholder="Name" required>
 					<input type="email" name="Email" placeholder="Email" required>
 					<textarea name="Message" cols="30" rows="6" placeholder="Message" required></textarea>
 					<!-- CONFIG -->
-					<input class="is-hidden" type="text" name="_gotcha">
+					<!--<input class="is-hidden" type="text" name="_gotcha">
 					<input type="hidden" name="_subject" value="Subject">
 					<input type="hidden" name="_cc" value="email@cc.com">
-					<!-- /CONFIG -->
+					<!-- /CONFIG 
 					<input class="submit" type="submit" value="Send">
-				</form>
+				</form> -->
 
 
-				<!--<div class="col-md-4 form__wrapper">
-					<form id="form-contact" method="POST" class="form-element forms" autocomplete="off">
+				<div class="col-md-4 form__wrapper" >
+					<form id="contact-form" method="POST" class="form-element forms" autocomplete="off" action="//formspree.io/your@email.com" method="post">
 						<h4>Форма зворотньго зв’язку</h4>
                         <p class="form-message"></p>
 						<label>
 							Ваше ім’я
-							<input name="name" type="text" class="form-input__name" tabindex="0" required>
+							<input name="Name" type="text" tabindex="0" required>
 						</label>
 						<label>
-							Ваш телефон
-							<input name="phone" type="tel" class="form-input__phone" tabindex="0" pattern="^[ 0-9]+$" required>
+							Ваш email
+							<input name="phone" type="email" tabindex="0" required>
+						</label>
+						<label>
+							Ваше повідомлення
+							<textarea name="Message" cols="30" rows="6" required></textarea>
 						</label>
 						<div class="button-wrap">
-							<button class="buttons">Відправити</button>
+							<button class="submit buttons" type="submit">Відправити</button>
 						</div>
 					</form>
-				</div>-->
+				</div>
                 <div class="form__wrapper">
                     <img src='mail.php?id=id_page'>
                 </div>
