--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
 						<ul>
 							<li>
 								<label>
-									Ваше ім’я
+									Як до Вас звертатись?
 									<input name="Name" type="text" tabindex="0" required>
 								</label>
 								<label>
-									Ваш email
-								<input name="phone" type="email" tabindex="0" required>
+									Куди передзвонити?
+								<input name="Phone" type="tel" tabindex="0" required>
 								</label>
 							</li>
 							<li>
 								<label>
-									Ваше повідомлення
+									Може Ви хочете щось мені одразу сказати? 
 									<textarea name="Message" cols="30" rows="6" required></textarea>
 								</label>
 								<div class="button-wrap">
