--- a/brels.html
+++ b/brels.html
@@ -80,24 +80,68 @@
                     </div>
                     <div class="row">
                         <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/7.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/7.jpg"></li></a>
+                        </div>
+						<div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/8.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/8.jpg"></li></a>
+                        </div>
+						<div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/9.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/9.jpg"></li></a>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-md-4">
                             <a class="item" href="./images/Collected/Brels/10.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/10.jpg"></li></a>
                         </div>
-						<div class="col-md-4">
+                        <div class="col-md-4">
                             <a class="item" href="./images/Collected/Brels/11.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/11.jpg"></li></a>
                         </div>
-						<div class="col-md-4">
+                        <div class="col-md-4">
                             <a class="item" href="./images/Collected/Brels/12.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/12.jpg"></li></a>
                         </div>
                     </div>
 					<div class="row">
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Brels/7.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/7.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Brels/13.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/13.jpg"></li></a>
                         </div>
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Brels/8.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/8.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Brels/14.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/14.jpg"></li></a>
                         </div>
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Brels/9.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/9.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Brels/15.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/15.jpg"></li></a>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/16.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/16.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/17.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/17.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/18.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/18.jpg"></li></a>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/19.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/19.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/20.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/20.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/21.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/21.jpg"></li></a>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/22.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/22.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/23.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/23.jpg"></li></a>
+                        </div>
+                        <div class="col-md-4">
+                            <a class="item" href="./images/Collected/Brels/24.jpg"><li><span class="description"></span><img src="./images/Collected/Brels/24.jpg"></li></a>
                         </div>
                     </div>
                 </ul>
