--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="css/media.css" />
+	<script type="text/javascript">
+		jQuery(function($){
+		$("#phone").mask("+38(999) 999-9999");
+   });
+	</script>
 </head>
 <body>
 	<header class="top-header">
@@ -85,12 +90,12 @@
 								</label>
 								<label>
 									Куди передзвонити?
-								<input name="Phone" type="tel" tabindex="0" required>
+								<input id="phone" name="Phone" type="tel" tabindex="0" required>
 								</label>
 							</li>
 							<li>
 								<label>
-									Може Ви хочете щось мені одразу сказати? 
+									Може Ви хочете щось мені одразу повідомити? 
 									<textarea name="Message" cols="30" rows="6" required></textarea>
 								</label>
 								<div class="button-wrap">
@@ -162,6 +167,17 @@
                                         <a href="brels.html"><li><span class="description">Брелоки</span><img src="./images/Collected/Brels/3.jpg"></li></a>
                                     </div>
                                 </div>
+								<div class="row">
+                                    <!--<div class="col-md-4">
+                                        <a href="post.html"><li><span class="description">Поштові</span><img src="./images/Collected/PersePost/1.jpg"></li></a>
+                                    </div>-->
+                                    <!--<div class="col-md-4">
+                                        <a href="ukrasheniya.html"><li><span class="description">Прикраси</span><img src="./images/Collected/Ukrasheniya/1.jpg"></li></a>
+                                    </div>-->
+                                    <div class="col-md-4">
+                                        <a href="wood.html"><li><span class="description">Щось ще...</span><img src="./images/Collected/Wood/1.jpg"></li></a>
+                                    </div>
+                                </div>
 							</ul>
 						</div>
 					</div>
@@ -224,7 +240,12 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+	
+	<script src="js/maskedinput.js"></script>
+	<script src="jquery.js" type="text/javascript"></script>
+	<script src="jquery.maskedinput.js" type="text/javascript"></script>
 
+	
 	<script src="libs/jquery/jquery-1.11.1.min.js"></script>
 	<script src="libs/jquery-mousewheel/jquery.mousewheel.min.js"></script>
     <script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
