--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                                     <!--<div class="col-md-4">
                                         <a href="post.html"><li><span class="description">Поштові</span><img src="./images/Collected/PersePost/1.jpg"></li></a>
                                     </div>-->
-                                    <!--<div class="col-md-4">
-                                        <a href="ukrasheniya.html"><li><span class="description">Прикраси</span><img src="./images/Collected/Ukrasheniya/1.jpg"></li></a>
-                                    </div>-->
+                                    <div class="col-md-4">
+                                        <a href="ukrasheniya.html"><li><span class="description_for_small">Прикраси</span><img src="./images/Collected/Ukrasheniya/1.jpg"></li></a>
+                                    </div>
                                     <div class="col-md-4">
                                         <a href="wood.html"><li><span class="description">Щось ще...</span><img src="./images/Collected/Wood/1.jpg"></li></a>
                                     </div>
