--- a/ukrasheniya.html
+++ b/ukrasheniya.html
@@ -58,24 +58,24 @@
                 <ul>
                     <div class="row">
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/1.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/1.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/1.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/1.jpg"></li></a>
                         </div>
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/2.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/2.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/2.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/2.jpg"></li></a>
                         </div>
 						<div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/3.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/2.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/3.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/2.jpg"></li></a>
                         </div>
                     </div>
 					<div class="row">
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/4.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/4.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/4.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/4.jpg"></li></a>
                         </div>
                         <div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/5.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/5.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/5.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/5.jpg"></li></a>
                         </div>
 						<div class="col-md-4">
-                            <a class="item" href="./images/Collected/Ukrasheniya/6.jpg"><li><span class="description"></span><img src="./images/Collected/Ukrasheniya/6.jpg"></li></a>
+                            <a class="item" href="./images/Collected/Ukrasheniya/6.jpg"><li><span class="description_for_small"></span><img src="./images/Collected/Ukrasheniya/6.jpg"></li></a>
                         </div>
                     </div>
                 </ul>
